--- a/602-Compiler-Design.org
+++ b/602-Compiler-Design.org
@@ -1,7 +1,7 @@
 * <<<602>>> COMPILER DESIGN
 # DESIGN AND IMPLEMENTATION OF COMPILERS
 :properties:
-:author: Dr. B. Bharathi and Dr. B. Prabavathy, Milton
+:author: Dr. B. Bharathi and Dr. B. Prabavathy
 :end:
 
 #+begin_comment
