206 and 602 minor changes

--- a/206-Foundations-of-Data-Science.org
+++ b/206-Foundations-of-Data-Science.org
@@ -1,6 +1,6 @@
 * <<<206>>> FOUNDATIONS OF DATA SCIENCE
 :properties:
-:author: Ms. S. Rajalakshmi  and Dr. J. Bhuvana
+:author: Ms. S. Rajalakshmi  and Dr. J. Bhuvana and Milton
 :date: 
 :end:
 
