--- a/PE403-Social-Network-Analysis.org
+++ b/PE403-Social-Network-Analysis.org
@@ -82,13 +82,16 @@ networks.
 
 \hfill *Total Periods: 45*
 
+
+
 ** COURSE OUTCOMES
 After the completion of this course, students will be able to: 
 - Explain Social network concepts, measures and data (K2)
-- Represent social networks mathematically (K2)
-- Understand the working of community detection algorithms for online Social networks (K2)
-- Use SNA tools for analysing social networks (K3)  
-- Apply Visualization to social networks (K3).
+- Interpret social networks mathematically (K2)
+- Compare the working of various community detection algorithms for online Social networks (K3)
+- Apply SNA tools for analysing social networks (K3)  
+- Make use of Visualization tools to social networks (K3)
+
 
 ** TEXTBOOKS
 1. Peter Mika, ``Social Networks and the Semantic Web'', 1st Edition,
