--- a/PE403-Social-Network-Analysis.org
+++ b/PE403-Social-Network-Analysis.org
@@ -25,43 +25,34 @@
 | 3 | 0 | 0 | 3 |
 
 #+BEGIN_COMMENT
-
-Modification
-   Course Objectives was reduced to three objectives.
-Major Change
-  Unit IV was completely replaced with new topics as suggested by BoS Experts
-  Course outcomes was modified reflecting Unit IV
-  New text book was added to cover the topics of Unit IV
-  
+  Course objectives changed
+  Course Outcomes changed
+  Text Book added
+  CO-PO Mapping updated
 #+END_COMMENT
 
-
 ** COURSE OBJECTIVES
-- To understand the concepts of social network analysis and formally represent social network 
-- To use SNA tools for applying community detection algorithms and visualization on online social network
-- To know the various applications of social network analysis.
+- Understand the Fundamentals of social network analysis (SNA)
+- Represent social network formally 
+- Apply Community detection algorithms to Social Networks
+- Apply SNA tools to work with SNA algorithms
+- Make use of visualization tools to visualize Social Network 
 
 {{{unit}}}
 |UNIT I | INTRODUCTION | 9 |
-Social Network Analysis: Development of social network analysis -- Key
-concepts and measures in network analysis -- Electronic Sources for
-Network Analysis: Electronic discussion networks -- Blogs and online
-communities -- Web-based networks -- Social Network Data: Introduction --
-Boundary specification and sampling -- Types of networks -- Network data --
-Measurement and collection.
+Social Network Analysis: Development of social network analysis -- Key concepts and measures in network analysis -- Electronic Sources for
+Network Analysis: Electronic discussion networks -- Blogs and online communities -- Web-based networks -- Social Network Data: Introduction --
+Boundary specification and sampling -- Types of networks -- Network data -- Measurement and collection.
 
 {{{unit}}}
 |UNIT II | MATHEMATICAL REPRESENTATION OF SOCIAL NETWORKS | 9 |
-Notations for Social Networks: Graph theoretic notations -- Sociometric
-notations -- Algebraic notations -- Two sets of actors -- Graph and
+Notations for Social Networks: Graph theoretic notations -- Sociometric notations -- Algebraic notations -- Two sets of actors -- Graph and
 matrices.
 
 {{{unit}}}
 |UNIT III | COMMUNITY DETECTION METHODOLOGIES, APPLICATIONS | 9 |
-Introduction -- Definition of communities -- Evaluating communities --
-Methodologies of Network Community Mining: Optimization based
-algorithms -- Heuristic methods -- Other methods -- Applications of
-community mining algorithms -- Multi-Relational characterization of
+Introduction -- Definition of communities -- Evaluating communities -- Methodologies of Network Community Mining: Optimization based
+algorithms -- Heuristic methods -- Other methods -- Applications of community mining algorithms -- Multi-Relational characterization of
 dynamic social network communities.
 
 {{{unit}}}
@@ -83,12 +74,11 @@ networks.
 \hfill *Total Periods: 45*
 
 
-
 ** COURSE OUTCOMES
 After the completion of this course, students will be able to: 
 - Explain Social network concepts, measures and data (K2)
 - Interpret social networks mathematically (K2)
-- Compare the working of various community detection algorithms for online Social networks (K3)
+- Apply various community detection algorithms to Social networks (K3)
 - Apply SNA tools for analysing social networks (K3)  
 - Make use of Visualization tools to social networks (K3)
 
@@ -97,16 +87,14 @@ After the completion of this course, students will be able to:
 
 1. Stanley Wasserman, Katherine Faust, ``Social Network Analysis Methods and Applications'', 1st Edition, Cambridge University
    Press, 1994. (Unit I and Unit II)
-2. Borko Furht, ``Handbook of Social Network Technologies and
-   Applications'', 1st Edition, Springer, 2010. (Unit III and Unit V)
+2. Borko Furht, ``Handbook of Social Network Technologies and Applications'', 1st Edition, Springer, 2010. (Unit III and Unit V)
 
 ** REFERENCES
 
-1. Peter Mika, ``Social Networks and the Semantic Web'', 1st Edition,
-   Springer, 2007. (Unit I)
+1. Peter Mika, ``Social Networks and the Semantic Web'', 1st Edition, Springer, 2007. (Unit I)
 2. Maksim Tsvetovat and Alexander Kouznetsov, ``Social Network Analysis for Startups'', O’Reilly,  2011. (Unit IV)
 3. Edward L. Platt, ``Network Science with Python and NetworkX Quick Start Guide: Explore and Visualize Network Data Effectively'',Packt Publishing, 2019. 
-2. Stephen P Borgatti, Martin G Everett, Jeffrey G Johnson, ``Analyzing Social Networks'', SAGE Publications, 2nd Edition, 2018.
-4. Charles Kadushin, ``Understanding Social Networks: Theories, Concepts, and Findings'', 1st Edition, Kindle Edition, Oxford University Press, 2012.
+4. Stephen P Borgatti, Martin G Everett, Jeffrey G Johnson, ``Analyzing Social Networks'', SAGE Publications, 2nd Edition, 2018.
+5. Charles Kadushin, ``Understanding Social Networks: Theories, Concepts, and Findings'', 1st Edition, Kindle Edition, Oxford University Press, 2012.
 
 
